--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.22",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "open-color": "^1.9.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
